# darling-metal

./: .gitignore  .gitmodules  CMakeLists.txt
examples/triangle/: build.sh  main.m
examples/triangle/Renderer/: AAPLRenderer.h  AAPLRenderer.m
include/Metal/: MTLBuffer.h  MTLCaptureManager.h  MTLCommandBuffer.h  MTLCommandEncoder.h  MTLCommandQueue.h  MTLCompileOptions.h  MTLComputeCommandEncoder.h  MTLComputePipeline.h  MTLDefines.h  MTLDepthStencilDescriptor.h  MTLDevice.h  MTLDrawable.h  MTLLibrary.h  MTLPipeline.h  MTLPixelFormat.h  MTLRenderCommandEncoder.h  MTLRenderPipeline.h  MTLResource.h  MTLSamplerDescriptor.h  MTLStencilDescriptor.h  MTLTexture.h  MTLTextureDescriptor.h  MTLTypes.h  MTLVertexDescriptor.h  Metal.h
include/MetalKit/: MTKView.h  MetalKit.h
include/MetalPerformanceShaders/: MetalPerformanceShaders.h
private-include/Metal/: MTLBufferInternal.h  MTLCommandBufferInternal.h  MTLCommandQueueInternal.h  MTLComputeCommandEncoderInternal.h  MTLComputePipelineInternal.h  MTLDeviceInternal.h  MTLDrawableInternal.h  MTLLibraryInternal.h  MTLPipelineInternal.h  MTLPixelFormatInternal.h  MTLRenderCommandEncoderInternal.h  MTLRenderPipelineInternal.h  MTLTextureInternal.h  MTLTypesInternal.h  stubs.h
src/: dummy.c
src/Metal/: MTLBuffer.mm  MTLCaptureManager.mm  MTLCommandBuffer.mm  MTLCommandQueue.mm  MTLCompileOptions.mm  MTLComputeCommandEncoder.mm  MTLComputePipeline.mm  MTLDepthStencilDescriptor.mm  MTLDevice.mm  MTLDrawable.mm  MTLLibrary.mm  MTLPipeline.mm  MTLRenderCommandEncoder.mm  MTLRenderPipeline.mm  MTLSamplerDescriptor.mm  MTLStencilDescriptor.mm  MTLTexture.mm  MTLTextureDescriptor.mm  MTLVertexDescriptor.mm  Metal.mm
src/MetalKit/: MTKView.m
